@@ -663,6 +663,13 @@ void GotoCodeGen::writeExec()
 			"		goto _out;\n";
 	}
 
+	if ( redFsm->errState != 0 ) {
+		outLabelUsed = true;
+		out << 
+			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
+			"		goto _out;\n";
+	}
+
 	out << "_resume:\n";
 
 	if ( redFsm->anyFromStateActions() ) {
@@ -703,6 +710,13 @@ void GotoCodeGen::writeExec()
 			"		}\n"
 			"	}\n"
 			"\n";
+	}
+
+	if ( redFsm->errState != 0 ) {
+		outLabelUsed = true;
+		out << 
+			"	if ( " << CS() << " == " << redFsm->errState->id << " )\n"
+			"		goto _out;\n";
 	}
 
 	if ( hasEnd ) {
